# automated-browser

./: .enx.example  .gitignore  Makefile  README.md  agents.yaml  pyproject.toml
src/app/: agents.py  browser.py  browser_manager.py  config.py  hooks.py  logging.py  main.py  model_provider.py  repl.py  tools.py
src/app/tools/: base.py  extractor.py  interactor.py  navigator.py
