[project]
name = "automated-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=15.0.1",
    "openai>=2.45.0",
    "openai-agents>=0.18.2",
    "playwright>=1.61.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 79
target-version = "py313"
src = ["."]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF022"  # sort __all__
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**.py" = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
